# ksqldb-flourist

./: .gitignore  main.py  pyproject.toml
src/: config.py  mail.py  middleware.py
src/auth/: dependecies.py  routes.py  schemas.py  services.py  utils.py
src/db/: main.py  models.py
